# evenquads

./: .gitignore  LICENSE  README.md  pyproject.toml
src/evenquads/: __init__.py  deck.py  game.py
